#7664 jumping issue fix

--- a/assets/styles/layouts/_main-navigation.scss
+++ b/assets/styles/layouts/_main-navigation.scss
@@ -181,6 +181,7 @@
 
   .navbar-brand {
     align-items: center;
+    height: 3.75rem;
 
     .navbar-burger {
       height: 2.5em;
